# GuildWatcher

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.MD  README.md  config-example.json  config-example.yml  guild_watcher.py  guildwatcher.py  pyproject.toml  requirements.txt  setup.py  test_guild_watcher.py  test_guildwatcher.py
.github/workflows/: build.yml  coverage.yml  deploy.yml
