[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "GuildWatcher"
version = "2.0.0"
dynamic = ["dependencies"]
authors = [
    { name = "Allan Galarza", email = "allan.galarza@gmail.com" }
]
maintainers = [
    { name = "Allan Galarza", email = "allan.galarza@gmail.com" }
]
license = { text = 'MIT' }
description = "A Discord webhook to track Tibia guild changes."
requires-python = '>=3.8'
readme = "README.md"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Communications :: Chat',
    'Topic :: Games/Entertainment',
    'Topic :: Games/Entertainment :: Role-Playing'
]


[project.urls]
"GitHub" = "https://github.com/Galarzaa90/GuildWatcher"
"Coverage: Codecov" = "https://codecov.io/gh/Galarzaa90/GuildWatcher/"

[project.scripts]
guildwatcher = "guildwatcher:scan_guilds"


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
